corrected layout issues with product page

--- a/app/assets/styles/components/spotlight.scss
+++ b/app/assets/styles/components/spotlight.scss
@@ -2,7 +2,6 @@
 
 .spotlight {
     width: 100%;
-    max-width: 600px;
     display: flex;
     flex-direction: column;
     gap: 20px;
