--- a/app/assets/styles/pages/product.scss
+++ b/app/assets/styles/pages/product.scss
@@ -7,22 +7,30 @@
         margin: auto;
         width: 100%;
         display: flex;
-        align-items: flex-start;
+        align-items: center;
         justify-content: center;
         gap: 40px;
         padding: 40px;
+
+        & > * {
+            flex: 0 0 main-size;
+            width: 50%;
+        }
 
         @media (max-width: 1000px) {
             flex-direction: column;
             align-items: center;
             justify-content: flex-start;
+
+            & > * {
+                width: 100%;
+            }
         }
 
         & .data {
             display: flex;
             flex-direction: column;
             gap: 40px;
-            width: 100%;
         }
     }
 }
